--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: "KABR: In-Situ Dataset for Kenyan Animal Behavior Recognition from Drone Videos"
-description: "Maksim Kholiavchenko, Jenna Kline, Michelle Ramirez, Sam Stevens, Alec Sheets, Reshma Ramesh Babu, Namrata Banerji, Elizabeth Campolongo, Nina Van Tiel, Jackson Miliko, Eduardo Bessa, Tanya Berger-Wolf, Daniel Rubenstein, Charles Stewart"
+description: "Maksim Kholiavchenko, Jenna Kline, Michelle Ramirez, Sam Stevens, Alec Sheets, Reshma Ramesh Babu, Namrata Banerji, Elizabeth Campolongo, Matthew Thompson, Nina Van Tiel, Jackson Miliko, Eduardo Bessa, Isla Duporge, Tanya Berger-Wolf, Daniel Rubenstein, Charles Stewart"
 email: kholim@rpi.edu
 theme: jekyll-theme-cayman
